tests/baselines/reference/classExtendsNull.errors.txt
tests/cases/compiler/classExtendsNull.ts(2,5): error TS17005: A constructor cannot contain a 'super' call when its class extends 'null'


==== tests/cases/compiler/classExtendsNull.ts (1 errors) ====
    class C extends null {
        constructor() {
        ~~~~~~~~~~~~~~~
            super();
    ~~~~~~~~~~~~~~~~
            return Object.create(null);
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS17005: A constructor cannot contain a 'super' call when its class extends 'null'
    }
    
    class D extends null {
        constructor() {
            return Object.create(null);
        }
    }